<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_player">Music</string>
    <string name="menu_sensor">Sensors</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_audio">Recorder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_story">Stories</string>
    <string name="menu_info">Info</string>
    <string name="start_record_audio">Start recording</string>
    <string name="stop_record_audio">Stop recording</string>
    <string name="make_photo_button">Make a photo</string>
    <string name="save_photo_button">Save this photo</string>
    <string name="save_info_button">Save</string>
    <string name="stories_button">Float action button</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="time_hint">Time</string>
    <string name="story_number_hint">Story Number</string>
    <string name="tm_times_number_hint">Time Number</string>
    <string name="occupation_hint">Job/Occupation</string>
    <string name="time">Get Time</string>
    <string name="hello_blank_fragment">Welcome to MireaProject</string>

    <string name="label_email_password">Email/Password Authentication</string>
    <string name="desc_email_password">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="email_password_title_text">Email and Password</string>
    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="desc_firebase_lockup">Firebase</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_map">Map</string>
</resources>