<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_baseline_calculate_24"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_baseline_open_in_browser_24"
            android:title="@string/menu_browser" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_baseline_library_music_24"
            android:title="@string/menu_player" />
        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_baseline_android_24"
            android:title="@string/menu_sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_baseline_mic_24"
            android:title="@string/menu_audio" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_story"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/menu_story" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_info" />
    </group>
</menu>