<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.netelev.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.netelev.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.netelev.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.netelev.mireaproject.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.netelev.mireaproject.WebViewFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_player"
        android:name="ru.mirea.netelev.mireaproject.MusicFragment"
        android:label="@string/menu_player"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.netelev.mireaproject.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.netelev.mireaproject.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_audio"
        android:name="ru.mirea.netelev.mireaproject.AudioFragment"
        android:label="@string/menu_audio"
        tools:layout="@layout/fragment_audio" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.netelev.mireaproject.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_story"
        android:name="ru.mirea.netelev.mireaproject.story.StoryFragment"
        android:label="@string/menu_story"
        tools:layout="@layout/fragment_story" />
    <fragment
        android:id="@+id/nav_info"
        android:name="ru.mirea.netelev.mireaproject.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_time"
        android:name="ru.mirea.netelev.mireaproject.tmtimes.TmTimesFragment"
        android:label="@string/time_hint"
        tools:layout="@layout/fragment_tm_times" />
</navigation>